--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -91,7 +91,7 @@ jobs:
 
       - name: Set project
         env:
-          GCP_PROJECT_ID: ${{ env.GCP_PROJECT_ID }}
+          GCP_PROJECT_ID: ${{ env.PROJECT_ID }}
         run: |
           gcloud config set project "${GCP_PROJECT_ID}"
           gcloud config set run/region "${{ env.REGION }}"
